Mobile: Add version of website for mobile

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="header">
                 <div class="header-logo">
-                    <img src="./img/logo.png" alt="logo" width="30%" /> -->
+                    <img src="./img/logo.png" alt="logo" />
                 </div>
                 <div class="header-menu">
                     <div class="first"><a href="#">Page 1</a></div>
@@ -59,6 +59,10 @@
                     <div class="third"><a href="#">Page 3</a></div>
                     <div class="fourth"><a href="#">Page 4</a></div>
                     <div class="fifth"><a href="#">Page 5</a></div>
+
+                    <a href="#"
+                        ><img src="./img/menu-icon.png" alt="menu-icon"
+                    /></a>
                 </div>
             </div>
 
@@ -76,7 +80,7 @@
             <div class="main">
                 <div class="title">Top Technologies</div>
                 <div class="emblem">
-                    <img src="./img/waves.png" alt="waves" width="35%" />
+                    <img src="./img/waves.png" alt="waves" />
                 </div>
                 <div class="blocks">
                     <div class="first">
@@ -106,8 +110,9 @@
                         </p>
                     </div>
                 </div>
+
                 <div class="picture">
-                    <img src="./img/circle.jpg" alt="circle" width="50%" />
+                    <img src="./img/circle.jpg" alt="circle" />
                 </div>
             </div>
         </div>
